# NTNU-Courses_and_projects

./: .gitignore  README.md
Courses/Algorithms_and_datastructures/: README.md
Courses/Algorithms_and_datastructures/Øving13/: .gitignore
Courses/Android_app_development/: README.md
Courses/Android_app_development/exercise3/: settings.gradle
Courses/Android_app_development/exercise4/: settings.gradle
Courses/Android_app_development/exercise7/: settings.gradle
Courses/Chemistry/Chemistry_assignment/: README.md  atomicRadii.csv  atomic_values.py  atomic_weight.csv  numericDensities.csv
Courses/Cplusplus/: .gitignore  README.md
Courses/Cplusplus/exercise6/task1/: CMakeLists.txt  ChessBoard.cpp  ChessBoardPrint.cpp  ChessBoardPrint.hpp  main.cpp
Courses/Cplusplus/exercise9/: CMakeLists.txt  main.cpp
Courses/Machine_learning/: .gitignore  README.md
Courses/Machine_learning/exercise2/: SigmoidModel.py
Courses/Machine_learning/exercise5/: Features(4).ipynb  Features.ipynb  exercise5.ipynb
Courses/Machine_learning/exercise6/: Dimension reduction(2).ipynb
Courses/Machine_learning/exercise7/: Exercise7.ipynb  Unsupervised learning(2).ipynb  (+1 more)
Courses/NetworkProgramming/: README.md
Courses/Python/: .gitignore  README.md
Courses/Security/: .gitignore  README.md
Courses/System_development2/: .gitignore  README.md
Projects/second-year/Network_programming - 2PC_protocol/prosjekt/: .gitlab-ci.yml  CMakeLists.txt  ChangelogParser.cpp  ClientSocket.cpp  ConnectionHandler.cpp  FileChecker.cpp  client  instruks_kompilering.txt  main.cpp  server
(+533 files in other folders)
